// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "betting_service/app/grpc/betting";
package betting;

option java_package = "com.sbe.gateway.bettingsvc";
option java_multiple_files = true;

// The Betting service definition.
service BettingService {
  // mts response handlers
  rpc BetAcceptedResponse(MTSResponse) returns (GeneralAck) {}
  rpc BetCancelledResponse(MTSResponse) returns (GeneralAck) {}
  rpc CancelBetAcceptedResponse(MTSResponse) returns (GeneralAck) {}
  rpc CancelBetRejectedResponse(MTSResponse) returns (GeneralAck) {}
  rpc MtsConnectionChangeResponse(MTSConnectionStatus) returns (GeneralAck) {}

}

message BettingPing {

}

message BettingPong {
  int64 Status = 1;
  string Data = 2;
}

// The request message containing the selection details.
message BetSummaryRequest {
  int32 profileID = 1;
}

message BetSummaryResponse {
  int32 NumberOfBets = 1;
  float Stake = 2;
  float Winning = 3;
}

message BetStatusRequest {
  int64 profileID = 1;
  string ShareCode = 2;
}

message SelectedSlips {

  string MatchName = 1;
  string Description = 2;
  int64 Status = 3;

}

message BetStatusResponse {

  int64  ID = 1;
  string Description = 2;
  int64 Status = 3;
  float Payout = 4;
  repeated SelectedSlips SelectedSlips = 5;

}

message PlaceBetRequest {
  repeated Slips slips = 1;
  int64 ProfileID = 2;
  float stake = 3;
  string source = 4;
  string ipAddress = 5;
  int64 betType = 6;
  string BookingCode = 7;
}

message CancelBetRequest {
  string shareCode = 1;
  int64 ProfileID = 2;
  int64 MSISDN = 3;
  string ipAddress = 4;
}

message CashOutRequest {
  int64 BetId = 1;
  float Amount = 2;
}

message Slips {
  int64  ProducerID = 1;
  int64  MatchID = 2;
  int64  MarketID = 3;
  string  Specifier = 4;
  string  OutcomeID = 5;
}

message PlaceBetResponseMessage {
  int64  status = 1;
  string description = 2;
  string shareCode = 3;
}

message CancelBetResponseMessage {
  int64  status = 1;
  string description = 2;
}

message CashOutResponseMessage {
  int64  status = 1;
  string description = 2;
}

message CashBackRequest {
  int64 profileId = 1;
}
message CashbackResponseMessage {
  bool awarded = 1;
}

message MTSResponse {
  int64 code = 1;
  string description = 2;
  string betID = 3;
}

message GeneralAck {
  string description = 1;
}

message MTSConnectionStatus {
  int64 status = 1;
  string description = 2;
}

